--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-10-09  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/s390/t-linux64 (MULTILIB_OPTIONS, MULTILIB_DIRNAMES,
+	MULTILIB_OSDIRNAMES, LIBGCC, INSTALL_LIBGCC, EXTRA_MULTILIB_PARTS):
+	Define.
+	* config/s390/linux.h (MULTILIB_DEFAULTS): Define.
+	* config/s390/libgcc-glibc.ver: Provide both 31 and 64-bit map for
+	multilib.
+
 2002-10-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/sparc/t-linux64 (MULTILIB_OPTIONS): Remove
