--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-03  Graham Stott  <graham.stott@btinternet.com>
+
+	* config/i386/i386.md ("femms"): Add "memory" attr "none".
+
 2002-10-09  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/s390/t-linux64 (MULTILIB_OPTIONS, MULTILIB_DIRNAMES,
