--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2002-07-19  Richard Henderson  <rth@redhat.com>
+
+	* loop.c (loop_givs_rescan): Delete the REG_EQUAL note, not the insn.
+
+2002-06-17  Eric Botcazou <ebotcazou@multimania.com>
+	    Glen Nakamura <glen@imodulo.com>
+
+	PR optimization/6713
+	* loop.c (loop_givs_rescan): Explicitly delete the insn that
+	sets a non-replaceable giv after issuing the new one.
+
 2002-09-03  Graham Stott  <graham.stott@btinternet.com>
 
 	* config/i386/i386.md ("femms"): Add "memory" attr "none".
