--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-08  Roger Sayle  <roger@eyesopen.com>
+
+	PR target/8087
+	* simplify-rtx.c (avoid_constant_pool_reference):  Allow constant
+	pool references that are constructed using LO_SUM.
+
 2002-07-19  Richard Henderson  <rth@redhat.com>
 
 	* loop.c (loop_givs_rescan): Delete the REG_EQUAL note, not the insn.
