--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.in (CFLAGS_FOR_TARGET): Add -O2.
+
 2002-09-14  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* MAINTAINERS: Update my email address.
