* doc/extend.texi (tls_model): Document. 	* varasm.c (decl_tls_model): New. 	* c-common.c (handle_tls_model_attribute): New. 	(c_common_attribute_table): Add tls_model. 	* config/alpha/alpha.c (alpha_encode_section_info): Use 	decl_tls_model. 	* flags.h (enum tls_model, flag_tls_default): Move... 	* tree.h (enum tls_model, flag_tls_default): ...here. 	(decl_tls_model): New prototype. 	* config/ia64/ia64.c (ia64_encode_section_info): Likewise. 	* config/i386/i386.c (ix86_encode_section_info): Likewise. 	* config/i386/i386.md (tls_global_dynamic, tls_local_dynamic_base): 	Allow !flag_pic.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@58030 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -13968,10 +13968,16 @@
 	      (clobber (reg:CC 17))])]
   ""
 {
-  if (!flag_pic)
-    abort ();
-  current_function_uses_pic_offset_table = 1;
-  operands[2] = pic_offset_table_rtx;
+  if (flag_pic)
+    {
+      operands[2] = pic_offset_table_rtx;
+      current_function_uses_pic_offset_table = 1;
+    }
+  else
+    {
+      operands[2] = gen_reg_rtx (Pmode);
+      emit_insn (gen_set_got (operands[2]));
+    }
   operands[3] = ix86_tls_get_addr ();
 })
 
@@ -14011,10 +14017,16 @@
 	      (clobber (reg:CC 17))])]
   ""
 {
-  if (!flag_pic)
-    abort ();
-  current_function_uses_pic_offset_table = 1;
-  operands[1] = pic_offset_table_rtx;
+  if (flag_pic)
+    {
+      operands[1] = pic_offset_table_rtx;
+      current_function_uses_pic_offset_table = 1;
+    }
+  else
+    {
+      operands[1] = gen_reg_rtx (Pmode);
+      emit_insn (gen_set_got (operands[1]));
+    }
   operands[2] = ix86_tls_get_addr ();
 })
 
