* config/i386/i386.md (UNSPEC_GOTNTPOFF, UNSPEC_INDNTPOFF): New. 	* config/i386/i386.c (legitimate_pic_address_disp_p): Handle 	UNSPEC_GOTNTPOFF and UNSPEC_INDNTPOFF like UNSPEC_GOTTPOFF. 	(legitimate_address_p): Likewise. 	(legitimize_address): Use @gotntpoff and @indntpoff. 	(output_pic_addr_const): Handle UNSPEC_GOTNTPOFF and UNSPEC_INDNTPOFF. 	(output_addr_const_extra): Likewise.
	* config/i386/i386.c (legitimate_pic_address_disp_p): Allow
	UNSPEC_NTPOFF and UNSPEC_DTPOFF to be offsetted by constant.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@58032 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -82,6 +82,8 @@
    (UNSPEC_TP                   24)
    (UNSPEC_TLS_GD               25)
    (UNSPEC_TLS_LD_BASE          26)
+   (UNSPEC_GOTNTPOFF		27)
+   (UNSPEC_INDNTPOFF		28)
 
    ; For SSE/MMX support:
    (UNSPEC_FIX                  30)
