--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,18 @@
+2002-09-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/i386/i386.md (UNSPEC_GOTNTPOFF, UNSPEC_INDNTPOFF): New.
+	* config/i386/i386.c (legitimate_pic_address_disp_p): Handle
+	UNSPEC_GOTNTPOFF and UNSPEC_INDNTPOFF like UNSPEC_GOTTPOFF.
+	(legitimate_address_p): Likewise.
+	(legitimize_address): Use @gotntpoff and @indntpoff.
+	(output_pic_addr_const): Handle UNSPEC_GOTNTPOFF and UNSPEC_INDNTPOFF.
+	(output_addr_const_extra): Likewise.
+
+2002-09-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/i386/i386.c (legitimate_pic_address_disp_p): Allow
+	UNSPEC_NTPOFF and UNSPEC_DTPOFF to be offsetted by constant.
+
 2002-09-27  Jakub Jelinek  <jakub@redhat.com>
 
 	* doc/extend.texi (tls_model): Document.
