* fold-const.c (fold) [RSHIFT_EXPR]: Optimize arithmetic right 	shifts of the form -1 >> x.
	* gcc.c-torture/execute/shiftopt-1.c: New test case.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58038 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-10  Roger Sayle  <roger@eyesopen.com>
+	    Nathan Sidwell <nathan@codesourcery.com>
+
+	* fold-const.c (fold) [RSHIFT_EXPR]: Optimize arithmetic right
+	shifts of the form -1 >> x.
+
 Thu Oct 10 16:52:55 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* cfgcleanup.c (insn_match_p): Verify sibcall flag for calls to.
