--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-10  Roger Sayle  <roger@eyesopen.com>
+
+	* gcc.c-torture/execute/shiftopt-1.c: New test case.
+
 2002-09-30  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/abi/empty7.C: New test.
