--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-10-10  Diego Novillo  <dnovillo@redhat.com>
+
+	* calls.c (flags_from_decl_or_type): Make extern.
+	(ECF_*): Move ...
+	* rtl.h (ECF_*): ... here.
+	(flags_from_decl_or_type): Declare.
+
 2002-10-10  Roger Sayle  <roger@eyesopen.com>
 	    Nathan Sidwell <nathan@codesourcery.com>
 
