* config/i386/i386.c (ix86_function_ok_for_sibcall): Allow 	indirect calls to be sibcall optimized. 	* config/i386/i386.md (sibcall_1): New. 	(call_1): Add no-sibcalls condition. 	(sibcall_value_1): New. 	(call_value_1): Add no-sibcalls condition.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58077 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-10-11  Andreas Bauer  <baueran@in.tum.de>
+
+	* config/i386/i386.c (ix86_function_ok_for_sibcall): Allow
+	indirect calls to be sibcall optimized.
+	* config/i386/i386.md (sibcall_1): New.
+	(call_1): Add no-sibcalls condition.
+	(sibcall_value_1): New.
+	(call_value_1): Add no-sibcalls condition.
+
 2002-10-11  Eric Christopher  <echristo@redhat.com>
 
        * output.h (default_valid_pointer_mode): Declare.
