--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -13711,19 +13711,22 @@
 (define_insn "*call_1"
   [(call (mem:QI (match_operand:SI 0 "call_insn_operand" "rsm"))
 	 (match_operand 1 "" ""))]
-  "!TARGET_64BIT"
+  "!SIBLING_CALL_P (insn) && !TARGET_64BIT"
 {
   if (constant_call_address_operand (operands[0], QImode))
-    {
-      if (SIBLING_CALL_P (insn))
-	return "jmp\t%P0";
-      else
-	return "call\t%P0";
-    }
-  if (SIBLING_CALL_P (insn))
-    return "jmp\t%A0";
-  else
-    return "call\t%A0";
+    return "call\t%P0";
+  return "call\t%A0";
+}
+  [(set_attr "type" "call")])
+
+(define_insn "*sibcall_1"
+  [(call (mem:QI (match_operand:SI 0 "call_insn_operand" "s,c,d,a"))
+	 (match_operand 1 "" ""))]
+  "SIBLING_CALL_P (insn) && !TARGET_64BIT"
+{
+  if (constant_call_address_operand (operands[0], QImode))
+    return "jmp\t%P0";
+  return "jmp\t%A0";
 }
   [(set_attr "type" "call")])
 
@@ -18022,19 +18025,23 @@
   [(set (match_operand 0 "" "")
 	(call (mem:QI (match_operand:SI 1 "call_insn_operand" "rsm"))
 	      (match_operand:SI 2 "" "")))]
-  "!TARGET_64BIT"
+  "!SIBLING_CALL_P (insn) && !TARGET_64BIT"
 {
   if (constant_call_address_operand (operands[1], QImode))
-    {
-      if (SIBLING_CALL_P (insn))
-	return "jmp\t%P1";
-      else
-	return "call\t%P1";
-    }
-  if (SIBLING_CALL_P (insn))
-    return "jmp\t%*%1";
-  else
-    return "call\t%*%1";
+    return "call\t%P1";
+  return "call\t%*%1";
+}
+  [(set_attr "type" "callv")])
+
+(define_insn "*sibcall_value_1"
+  [(set (match_operand 0 "" "")
+	(call (mem:QI (match_operand:SI 1 "call_insn_operand" "s,c,d,a"))
+	      (match_operand:SI 2 "" "")))]
+  "SIBLING_CALL_P (insn) && !TARGET_64BIT"
+{
+  if (constant_call_address_operand (operands[1], QImode))
+    return "jmp\t%P1";
+  return "jmp\t%*%1";
 }
   [(set_attr "type" "callv")])
 
