* simplify-rtx.c (simplify_binary_operation) [ASHIFTRT]: Optimize 	arithmetic right shifts of ~0 during RTL simplifications.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58090 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-12  Roger Sayle  <roger@eyesopen.com>
+
+	* simplify-rtx.c (simplify_binary_operation) [ASHIFTRT]: Optimize
+	arithmetic right shifts of ~0 during RTL simplifications.
+
 2002-10-11  Andreas Bauer  <baueran@in.tum.de>
 
 	* config/i386/i386.c (ix86_function_ok_for_sibcall): Allow
