--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-13  Richard Henderson  <rth@redhat.com>
+
+        * rtl.c (shallow_copy_rtx): Use memcpy for the entire node.
+
 2002-10-12  Roger Sayle  <roger@eyesopen.com>
 
 	* simplify-rtx.c (simplify_binary_operation) [ASHIFTRT]: Optimize
