--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-10-13  Richard Henderson  <rth@redhat.com>
 
+	* config/i386/i386.c (sibcall_insn_operand): New.
+	* config/i386/i386.h (PREDICATE_CODES): Update.
+	* config/i386/i386-protos.h: Update.
+	* config/i386/i386.md (sibcall_1, sibcall_value_1): Use it.
+
         * rtl.c (shallow_copy_rtx): Use memcpy for the entire node.
 
 2002-10-12  Roger Sayle  <roger@eyesopen.com>
