--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-10-13  Richard Henderson  <rth@redhat.com>
 
+	* config/i386/i386.c (ix86_function_ok_for_sibcall): Reject
+	indirect sibcalls when regparm >= 3.
+
 	* config/i386/i386.c (sibcall_insn_operand): New.
 	* config/i386/i386.h (PREDICATE_CODES): Update.
 	* config/i386/i386-protos.h: Update.
