--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/tls/struct-1.c: New test.
+
 2002-10-09  Zack Weinberg  <zack@codesourcery.com>
 
 	PR c/7353
