--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-10-14  Richard Sandiford  <rsandifo@redhat.com>
+
+	* doc/tm.texi (DRIVER_SELF_SPECS): Document.
+	* gcc.c (driver_self_specs): New variable.
+	(do_self_spec): New function.
+	(main): Use it to process driver_self_specs.
+
 2002-10-09  Richard Sandiford  <rsandifo@redhat.com>
 
 	* config/mips/mips.md (one_cmpldi2): Use only if TARGET_64BIT.
