* gcov-io.h (gcov_info): Fix type. 	* profile.c (get_exec_counts): use symbol name. 	(branch_prob): Likewise. 	(create_profiler): Fix type missmatch.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58127 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+Mon Oct 14 19:22:19 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* gcov-io.h (gcov_info): Fix type.
+	* profile.c (get_exec_counts): use symbol name.
+	(branch_prob): Likewise.
+	(create_profiler): Fix type missmatch.
+
 2002-10-13  Richard Henderson  <rth@redhat.com>
 
 	* config/i386/i386.c (ix86_function_ok_for_sibcall): Reject
