2002-10-15  Eric Christopher  <echristo@redhat.com>
	* stor-layout.c (layout_type): Call GET_MODE_BITSIZE once.
	* java/parse.y (obtain_incomplete_type): Make pointer
	ptr_mode.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58182 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-15  Eric Christopher  <echristo@redhat.com>
+
+	* stor-layout.c (layout_type): Call GET_MODE_BITSIZE once.
+	* java/parse.y (obtain_incomplete_type): Make pointer
+	ptr_mode.
+
 Mon Oct 14 19:22:19 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* gcov-io.h (gcov_info): Fix type.
