* gcc.dg/vr-mult[1-7].c: New tests.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/mips-3_4-rewrite-branch@58201 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-16  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gcc.dg/vr-mult[1-7].c: New tests.
+
 2002-09-30  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/abi/empty7.C: New test.
