--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,32 @@
 2002-10-16  Jakub Jelinek  <jakub@redhat.com>
 
+	* fold-const.c: Include langhooks.h.
+	* Makefile.in (fold-const.o): Depend on langhooks.h.
+
+2002-08-21  Tom Tromey  <tromey@redhat.com>
+
+	For PR java/6005 and PR java/7611:
+	* fold-const.c (fold_truthop): Use can_use_bit_fields_p.
+	(fold): Likewise.
+	* langhooks.c (lhd_can_use_bit_fields_p): New function.
+	* langhooks-def.h (lhd_can_use_bit_fields_p): Declare.
+	(LANG_HOOKS_CAN_USE_BIT_FIELDS_P): New define.
+	(LANG_HOOKS_INITIALIZER): Use it.
+	* langhooks.h (struct lang_hooks) [can_use_bit_fields_p]: New
+	field.
+
+2002-07-24  Richard Henderson  <rth@redhat.com>
+
+	* expr.c (expand_expr) [TRY_FINALLY_EXPR]: Use GOTO_SUBROUTINE_EXPR
+	form when not optimizing.
+
+2002-07-21  Richard Henderson  <rth@redhat.com>
+
+	* expr.c (expand_expr) [TRY_FINALLY_EXPR]: Don't use
+	GOTO_SUBROUTINE_EXPR when finally_block can be re-expanded.
+
+2002-10-16  Jakub Jelinek  <jakub@redhat.com>
+
 	* fold-const.c (fold): Fix a typo.
 
 2002-10-15  Ulrich Weigand  <uweigand@de.ibm.com>
