--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,90 @@
+2002-10-15  Andrew Haley  <aph@redhat.com>
+
+	* parse.y (patch_invoke): Call force_evaluation_order on a static
+	arg list.
+	(resolve_qualified_expression_name): Call force_evaluation_order
+	on a arg list that is part of a Qualified Expression Name.
+
+2002-10-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* parse.y (merge_string_cste): Add parentheses around & within |.
+
+2002-10-08  Tom Tromey  <tromey@redhat.com>
+
+	* parse.y (variable_declarator_id): Simplify error path for
+	array declarator error.  For PR java/8003.
+
+2002-10-07  Anthony Green  <green@redhat.com>
+
+	* parse.y (merge_string_cste): Fix bug in string concatenation.
+
+2002-10-01  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* jcf-dump.c (print_constant, case CONSTANT_float): Don't fall
+	foul of type-based aliasing.
+
+2002-09-26  Andrew Haley  <aph@redhat.com>
+
+	* expr.c (build_java_array_length_access): Check for null pointer.
+	* expr.c (expand_java_arrayload): Likewise.
+
+2002-09-17  Tom Tromey  <tromey@redhat.com>
+
+	* lex.c (java_read_unicode_collapsing_terminators): Handle case
+	where \r appears at EOF.  Fixes PR java/7950.
+
+2002-09-11  Per Bothner  <per@bothner.com>
+
+	* parse.y (fold_constant_for_init):  If a VAR_DECL, convert numerical
+	constant to the type of the field.
+	(java_complete_tree):  Remove now-redundant code.
+
+	* parse.y (fold_constant_for_init):  'null' is not a constant expr.
+
+2002-09-03  Jesse Rosenstock  <jmr@ugcs.caltech.edu>
+
+	For PR java/5794:
+	* verify.c (verify_jvm_instructions) [OPCODE_jsr]: Only push the
+	return label if a ret instruction for the jsr has been reached.
+
+2002-08-28  Andrew Haley  <aph@redhat.com>
+
+	* verify.c (verify_jvm_instructions): Allow exception handler
+	inside code that is being protected, but generate a warning.
+	* except.c (link_handler): Initialize `expanded' in new eh_range.
+	(binding_depth, is_class_level, current_pc): Declare extern.
+
+2002-08-26  Tom Tromey  <tromey@redhat.com>
+
+	* parse.y (try_builtin_assignconv): Allow narrowing primitive
+	conversion if RHS_TYPE is byte, short, or char.
+
+2002-08-21  Tom Tromey  <tromey@redhat.com>
+
+	For PR java/6005 and PR java/7611:
+	* lang.c (LANG_HOOKS_CAN_USE_BITFIELDS_P): New define.
+	(java_can_use_bit_fields_p): New function.
+
+2002-08-08  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* jcf-write.c (get_access_flags): Return correct access flags for
+	private and protected inner classes.
+
+2002-07-22  Tom Tromey  <tromey@redhat.com>
+
+	* lex.c (java_lex): Check for `e' or `E' after 0.
+
+2002-07-21  Richard Henderson  <rth@redhat.com>
+
+	* lang.c (java_unsafe_for_reeval): New.
+	(LANG_HOOKS_UNSAFE_FOR_REEVAL): New.
+
+2002-07-01  Tom Tromey  <tromey@redhat.com>
+
+	For PR libgcj/7073:
+	* parse.y (patch_incomplete_class_ref): Handle VOID_TYPE
+	specially.
+
 2002-10-06  Roger Sayle  <roger@eyesopen.com>
 
 	PR optimization/6627
