--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,26 @@
+2002-10-15  Andrew Haley  <aph@redhat.com>
+
+	* libjava.lang/EvaluationOrder.java (EvaluationOrder): New.
+	* libjava.lang/EvaluationOrder.out (EvaluationOrder): New.
+
+2002-10-03  Andrew Haley  <aph@redhat.com>
+
+	* libjava.lang/Array_3.java (baz): New.
+	(main): Call baz.
+
+2002-09-29  Anthony Green  <green@redhat.com>
+
+	* libjava.lang/utf8concat.java: New file.
+	* libjava.lang/utf8concat.out: Ditto.
+
+2002-08-26  Tom Tromey  <tromey@redhat.com>
+
+	* libjava.compile/narrow_case.java: New file.
+
+2002-07-22  Tom Tromey  <tromey@redhat.com>
+
+	* libjava.compile/zeroexp.java: New file.
+
 2002-08-16  H.J. Lu <hjl@gnu.org>
 
 	* lib/libjava.exp (gcc_version): Removed.
