--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-10-16  Vladimir Makarov  <vmakarov@redhat.com>
+
+	* config/ia64/ia64.c (bundling): Print states for Itanium2 too.
+	(ia64_reorg):  Set up queried unit codes for Itanium2 too.
+
+	* config/ia64/ia64.md: Add descriptions for Itanium2.
+
 2002-10-08  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* config/ia64/ia64.h (processor_type): New enumeration.
