2002-10-11  Mark Mitchell  <mark@codesourcery.com>
	* decl.c (layout_var_decl): Call layout_decl even for variables
	whose type is an array with unspecified bounds.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58235 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-11  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (layout_var_decl): Call layout_decl even for variables
+	whose type is an array with unspecified bounds.
+
 2002-10-11  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	PRs C++/6803, C++/7721 and C++/7803
