Add a missed entry in ChangeLog.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/itanium-sched-branch@58261 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -5,6 +5,7 @@
 	* config/ia64/itanium2.md: New file.
 
 	* config/ia64/ia64.md: Move DFA descriptions into the new files.
+	Remove the old pipeline description.
 	
 	* config/ia64/ia64.c (ia64_override_options): Add aliases of
 	itanium processor names.
