* doc/invoke.texi: Document the -funsafe-profile-arcs option. 	Fix up some overfull hboxes in "make dvi".
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/cfg-branch@58323 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-19  Roger Sayle  <roger@eyesopen.com>
+
+	* doc/invoke.texi: Document the -funsafe-profile-arcs option.
+	Fix up some overfull hboxes in "make dvi".
+
 2002-06-19  Mark Mitchell  <mark@codesourcery.com>
 
 	* Makefile.in (QMTEST_DIR): Simplify definition.
