--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-20  Zack Weinberg  <zack@codesourcery.com>
+
+	* config/i386/i386.c (ix86_function_ok_for_sibcall): Fix an
+	inverted test in the conditional determining the possibility
+	of sibcalls in PIC mode.
+
 Sat Oct 19 22:02:28 2002  Alexandre Oliva  <aoliva@redhat.com>
 	Angela Marie Thomas  <angela@releasedominatrix.com>
 	Brendan Kehoe  <brendan@zen.org>
