* gcc.dg/sibcall-5.c: Correct { dg-do run } line.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58367 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-21  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.dg/sibcall-5.c: Correct { dg-do run } line.
+
 2002-10-20  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
 
 	* testsuite/gcc.dg/i386-sse-3.c: Add tests for _mm_srli_si128 and
