* config/i386/i386.c (ix86_function_ok_for_sibcall): Look at         the function type, not the return type.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58386 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-21  Richard Henderson  <rth@redhat.com>
+
+	* config/i386/i386.c (ix86_function_ok_for_sibcall): Look at
+	the function type, not the return type.
+
 2002-10-20  Zack Weinberg  <zack@codesourcery.com>
 
 	* config/i386/i386.c (ix86_function_ok_for_sibcall): Fix an
