--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,29 @@
+2002-10-21  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.dg/noncompile/920923-1.c: Prevent spurious regressions with
+	bison 1.50 or later.
+
+2002-10-18  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/7676
+	* g++.dg/overload/method2.C: New test.
+
+2002-10-17  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/7584
+	* g++.dg/inherit/using3.C: New test.
+
+2002-10-16  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/7478
+	* g++.dg/template/ref1.C: New test.
+
+	PR c++/8134
+	* g++.dg/init/pm1.C: XFAIL it.
+
+	PR c++/7524
+	* g++.dg/init/array7.C: New test.
+
 2002-10-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/tls/pic-1.c: New test.
