--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-10-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/i386/i386.md (subdi3_1): Add call to ix86_binary_operator_ok.
+
+2002-10-15  Jim Wilson  <wilson@redhat.com>
+
+	* config/i386/i386.md (adddi3_1): Add call to ix86_binary_operator_ok.
+
 2002-10-21  Matthias Klose  <doko@debian.org>
 
 	* Backport, without whitespace change:
